<resources>
    <string name="app_name">Tipatch</string>
    <string name="contact">Contact</string>
    <string name="patch_btn">Patch</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="oss_licenses">Open-source licenses</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="donate">Donate</string>
    <string name="author">Author</string>
    <string name="version">Version</string>
    <string name="icon">Icon</string>
    <string name="exit">Close app</string>
    <string name="fab_actions">Actions</string>
    <string name="undo">Undo patch</string>
    <string name="restore">Restore backup</string>
    <string name="delete_backup">Delete backup</string>
    <string name="no_backups">No recovery backup saved</string>
    <string name="request_support">Request support</string>

    <string name="delete_backup_success">Recovery backup deleted</string>
    <string name="restore_backup_progress">Restoring recovery backup</string>
    <string name="restore_backup_success">Recovery backup restored</string>
    <string name="restore_backup_fail">Failed to restore recovery backup</string>

    <string name="author_name">Khronodragon</string>
    <string name="author_nick">\"kdrag0n\"</string>

    <string name="err_generic">Oops…</string>
    <string name="err_native_empty">An error occurred processing the image.</string>
    <string name="err_native_unknown">An error occurred processing the image: %s.</string>
    <string name="err_native_io_read">An error occurred reading the image: %s.</string>
    <string name="err_native_io_read_empty">An error occurred reading the image.</string>
    <string name="err_native_io_write">An error occurred writing the image: %s.</string>
    <string name="err_native_io_write_empty">An error occurred writing the image.</string>
    <string name="err_native_comp">An error occurred compressing the ramdisk: %s.</string>
    <string name="err_native_comp_empty">An error occurred compressing the ramdisk.</string>
    <string name="err_native_decomp">An error occurred decompressing the ramdisk: %s.</string>
    <string name="err_native_decomp_empty">An error occurred decompressing the ramdisk.</string>
    <string name="err_native_comp_magic">Unable to detect ramdisk compression method. The image is probably corrupted.</string>
    <string name="err_native_comp_method">The %s compression method is not currently supported.</string>
    <string name="err_oom">Out of memory. Try closing some apps.</string>
    <string name="err_java">An internal error of type %s occurred: %s.</string>
    <string name="err_close_output">An error occurred cleaning up the written image: %s.</string>
    <string name="err_backup">Recovery backup failed: %s.</string>
    <string name="err_part_empty">Unknown error searching for partitions via root.</string>
    <string name="err_part_root">Root command failed while searching for partitions: %s.</string>
    <string name="err_open_file">Unable to open %s image. Make sure the file exists and that you can access it.</string>
    <string name="err_open_file_inp">input</string>
    <string name="err_open_file_out">output</string>
    <string name="err_open_part">Unable to read from recovery partition. Select an image file and flash it instead.</string>
    <string name="err_open_part_out">Unable to write to recovery partition. Select an image file and flash it instead.</string>
    <string name="err_mailto_handler">You don\'t have an email app. Please email this address for help: %s</string>
    <string name="err_no_file_handler">Please install an app that supports selecting files and try again.</string>

    <string name="part_not_found">Tipatch was unable to find your device\'s recovery partition. Select an image file and flash it instead.</string>
    <string name="part_complete_slot">Recovery in both slots patched!</string>
    <string name="part_complete">Recovery patched!</string>

    <string name="file_select_input">Please select an image file to patch.</string>
    <string name="file_select_output">Please select an output file.</string>
    <string name="file_complete">Image patched!</string>

    <string name="header_patching">Patching image</string>
    <string name="header_patching_part">Patching recovery</string>
    <string name="header_patching_unknown_slot">Patching recovery (unknown slot)</string>
    <string name="header_patching_slot">Patching recovery (slot %s)</string>

    <string name="step0_backup">Backing up image</string>
    <string name="step1_read_unpack">Reading &amp; unpacking image</string>
    <string name="step2_decompress">Decompressing ramdisk with %s</string>
    <string name="step3_patch_rev">Reversing ramdisk patches</string>
    <string name="step3_patch">Patching ramdisk</string>
    <string name="step4_compress">Compressing ramdisk with %s</string>
    <string name="step4_compress_lzma">Compressing ramdisk with LZMA (this will take a while)</string>
    <string name="step5_pack_write">Repacking &amp; writing image</string>

    <string name="pref_file_input">Input source</string>
    <string name="pref_file_input_desc">The recovery image to patch</string>
    <string name="pref_file_output">Output destination</string>
    <string name="pref_file_output_desc">Where to save the patched recovery image</string>
    <string name="pref_partition">In-place patching</string>
    <string name="pref_partition_desc">Patch the current recovery in-place (requires root)</string>
    <string name="pref_backup">Take backup</string>
    <string name="pref_backup_desc">Back up the current recovery before patching (recommended)</string>

    <string name="about_src">Source code</string>
    <string name="about_src_desc">On GitHub</string>
    <string name="about_donate_desc">Support future development (apps, kernels, etc)</string>

    <string name="contact_mail">kdrag0n (at) pm.me</string>
    <string name="source_uri">https://github.com/kdrag0n/tipatch</string>
    <string name="donate_uri">https://paypal.me/dragon5232</string>
    <string name="website_uri">https://khronodragon.com/</string>

    <string name="telegram">Telegram</string>
    <string name="github">GitHub</string>
    <string name="xda">XDA-Developers</string>
    <string name="email">Email</string>
    
    <string name="telegram_uri">https://t.me/kdrag0n</string>
    <string name="github_uri">https://github.com/kdrag0n</string>
    <string name="xda_uri">https://forum.xda-developers.com/android/apps-games/app-twrp-tipatch-backup-internal-t3831217</string>

    <!-- Line breaks and margins don't work properly in plain XML -->
    <string name="full_info"><![CDATA[
<h4>What is Tipatch?</h4>
<p><b>Tipatch</b> patches <a href=\"https://twrp.me/about/\">TWRP</a> recovery to back up your internal storage (emulated SD card), meaning your photos, music, game data, downloads, and more will be <i>saved</i> in backups instead of excluded.</p>

<h4>How do I use Tipatch?</h4>
<p>If your device is <b>rooted</b>, you can patch your current recovery (both slots on A/B) with one tap.</p>

<p>If you\'re <b>not rooted</b>, download your device\'s recovery image and patch that. Then flash or boot the patched image as usual.</p>

<h4>Effects</h4>
&nbsp;&nbsp;&nbsp;&nbsp;• \"Data (incl. storage)\" on Backup screen<br/>
&nbsp;&nbsp;&nbsp;&nbsp;• \"Backups of Data include…\" while backing up<br/>
&nbsp;&nbsp;&nbsp;&nbsp;• Bigger Data size on Backup screen<br/>

<p>Side effect: Wiping Data <b>will also</b> wipe internal storage.</p>

<p>If you use a theme or a language other than English, the text <b>will not</b> change. Revert to the default theme and/or change to English to confirm.</p>

<p>Restoring backups with internal storage does <b>not</b> require a patched recovery.</p>

<h4>Problems?</h4>
<p>If Tipatch does not work properly on your device in any way, please let me know via the Contact menu option.</p>

<h4>Help, something broke!</h4>
<p>Reflash your recovery image. If you used in-place patching, tap \'Restore backup\' in the action menu.</p>
]]>
    </string>

    <!-- Projects -->
    <string name="proj_libsu">libsu</string>
    <string name="proj_about">AboutCardRow</string>
    <string name="proj_gzipcpp">gzip_cpp</string>
    <string name="proj_speeddial">FAB Speed Dial</string>
</resources>
