<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:title="@string/app_name"
            android:key="version"/>
        <Preference
            android:title="@string/about_src"
            android:summary="@string/about_src_desc"
            android:key="source"/>

        <Preference
            android:title="@string/donate"
            android:summary="@string/about_donate_desc"
            android:key="donate"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/contact">
        <Preference
            android:title="Telegram"
            android:key="telegram"/>
        <Preference
            android:title="GitHub"
            android:key="github"/>
        <Preference
            android:title="XDA-Developers"
            android:key="xda"/>
        <Preference
            android:title="Email"
            android:key="email"/>
    </PreferenceCategory>
</PreferenceScreen>
