<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_about"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables,ContentDescription">

        <LinearLayout
            android:id="@android:id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?attr/cardStyle"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="72dp"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="72dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/app_name"
                            android:textAppearance="@android:style/TextAppearance.Material.Headline"/>
                    </LinearLayout>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_info_outline"
                        app:text="@string/version"/>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_github"
                        app:text="@string/about_src"/>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_donate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_money"
                        app:text="@string/donate"/>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_oss"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_book"
                        app:text="@string/oss_licenses"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="?attr/cardStyle"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_person"
                        app:text="@string/author_name"/>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_telegram"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_send"
                        app:text="@string/telegram"/>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_xda"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_xda"
                        app:text="@string/xda"/>

                    <com.kdrag0n.utils.AboutCardRow
                        android:id="@+id/about_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_email"
                        app:text="@string/email"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>